--- a/core/src/main/resources/templates/common.html
+++ b/core/src/main/resources/templates/common.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+        @import url(https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700);
         * {
             box-sizing: content-box;
             margin: 0px;
@@ -66,6 +67,75 @@
                 0 50px 25px rgba(0, 0, 0, .2);
             }
         }
+
+        button.button {
+            display: block;
+            position: relative;
+            float: left;
+            width: 700px;
+            padding: 0;
+            margin: 10px 20px 10px 0;
+            font-weight: 600;
+            text-align: center;
+            line-height: 50px;
+            color: #FFF;
+            border-radius: 5px;
+            transition: all 0.2s ;
+        }
+
+        .btnBlueGreen {
+            background: #00AE68;
+        }
+
+        .btnLightBlue {
+            background: #5DC8CD;
+        }
+
+        .btnOrange {
+            background: #FFAA40;
+        }
+
+        .btnPurple {
+            background: #A74982;
+        }
+
+        .btnBlueGreen.btnPush {
+            box-shadow: 0px 5px 0px 0px #007144;
+        }
+
+        .btnLightBlue.btnPush {
+            box-shadow: 0px 5px 0px 0px #1E8185;
+        }
+
+        .btnOrange.btnPush {
+            box-shadow: 0px 5px 0px 0px #A66615;
+        }
+
+        .btnPurple.btnPush {
+            box-shadow: 0px 5px 0px 0px #6D184B;
+        }
+
+        .btnPush:hover {
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+
+        .btnBlueGreen.btnPush:hover {
+            box-shadow: 0px 0px 0px 0px #007144;
+        }
+
+        .btnLightBlue.btnPush:hover {
+            box-shadow: 0px 0px 0px 0px #1E8185;
+        }
+
+        .btnOrange.btnPush:hover {
+            box-shadow: 0px 0px 0px 0px #A66615;
+        }
+
+        .btnPurple.btnPush:hover {
+            box-shadow: 0px 0px 0px 0px #6D184B;
+        }
+
         .header-wrapper {
             position: relative;
             overflow: hidden;
@@ -73,6 +143,7 @@
         .header-container {
             width: 1024px;
             min-height: 120px;
+            text-align: center;
             padding: 20px 0 0 0;
             margin: 0 auto;
         }
@@ -84,16 +155,16 @@
             width: 1024px;
             padding: 10px 0 0 0;
             margin: 0 auto;
+            overflow: hidden;
         }
         .form-class {
-
+            overflow: hidden;
+            text-align: center;
         }
         .text {
             display: inline-block;
             font-weight: 700;
             font-size: 42px;
-            font-family: 'Roboto Slab', serif;
-            color : #1e9ad6;
             padding: 0 10px 0 0;
         }
         .input-text-class {
@@ -102,6 +173,11 @@
             font-size: 18px;
             border: 4px solid #1e9ad6;
             padding: 2px;
+        }
+        .button-container {
+            overflow: hidden;
+            text-align: center;
+            margin: 0 160px;
         }
     </style>
 </head>
@@ -132,10 +208,14 @@
     <div class="main-wrapper">
         <div class="main-container">
             <form action="/post" method="post" class="form-class">
-                <div class="text">TEXT</div>
+                <div class="text">유저이름</div>
                 <input type="text" value="" name="text" class="input-text-class" placeholder="보내고 싶은 텍스트를 입력해주세요">
-
-                
+                <div class="button-container">
+                    <button type="submit" class="button btnPush btnBlueGreen">프리셋 1.폰트: Arial, 텍스트 크기: 30px, 텍스트 컬러: 그린, 텍스트 효과: 바운스</button>
+                    <button type="submit" class="button btnPush btnLightBlue">프리셋 2.폰트: Gerogia, 텍스트 크기: 42px, 텍스트 컬러: 스카이블루, 텍스트 효과: 네온</button>
+                    <button type="submit" class="button btnPush btnOrange">프리셋 3.폰트: Sans, 텍스트 크기: 50px, 텍스트 컬러: 오렌지, 텍스트 효과: 지그재그</button>
+                    <button type="submit" class="button btnPush btnPurple">프리셋 4.폰트: London, 텍스트 크기: 82px, 텍스트 컬러: 퍼플, 텍스트 효과: 팝콘</button>
+                </div>
             </form>
         </div>
     </div>
