10/25 add Login & student repository & DataBase

--- a/core/src/main/resources/templates/common.html
+++ b/core/src/main/resources/templates/common.html
@@ -219,7 +219,7 @@
     <div class="main-wrapper">
         <div class="main-container">
             <form action="/common-post" method="post" class="form-class">
-                <div class="text">유저이름</div>
+                <div>유저네임</div>
                 <input type="text" value="" name="text" class="input-text-class" placeholder="보내고 싶은 텍스트를 입력해주세요">
                 <div class="button-container">
                     <button type="submit" class="button btnPush btnBlueGreen" name="preset" value="1">프리셋 1.폰트: Arial, 텍스트 크기: 30px, 텍스트 컬러: 그린, 텍스트 효과: 바운스</button>
